[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "your_project_name"
version = "0.1.0"
description = "Your project description here"
authors = ["Your Name <youremail@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.0.2"
boto3 = "^1.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
